# brownian_motion_in_a_box

source/: CMakeLists.txt  main.cpp  sdl_main.cpp
source/particles/: CMakeLists.txt  binary_heap.h  collision_event.h  i_collision_event.h  i_heap.h  i_particle_2D_in_a_box.h  i_scatter_event.h  i_system_simulation.h  particle_2D_in_a_box.h  scatter_event.h  system_simulation.h
source/sdl/: SDL_wrapper.cpp  SDL_wrapper.h
